--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,7 @@ header{
     height: 100%;
 }
 
+#title:hover{cursor: pointer;}
 #title{
     float: left;
     width: 430px;
@@ -181,6 +182,10 @@ header{
     font-weight: bold;
     float:right;
 }
+
+.meter{color: red;}
+
+#don{margin-top: 10px;}
 
 /* ==========================================================================
    Media Queries
