--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
                 </a>
             </li>
             <li>
-                <a href="http://twitter.com/okiwi_fr">
+                <a href="https://plus.google.com/u/0/communities/110003801009461308694">
                     <i id="google-plus" class="fa fa-google-plus-square fa-lg"></i> GOOGLE +
                 </a>
             </li>
