Ajout de title sur les liens

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,30 +24,30 @@
         </a>
         <ul id="menu" class="nav nav-pills pull-right">
             <li>
-                <a href="https://www.google.com/calendar/embed?src=emrdkvvu6iuqkp6g2etjp5295g@group.calendar.google.com">
+                <a title="Calendrier des évènements Okiwi" href="https://www.google.com/calendar/embed?src=emrdkvvu6iuqkp6g2etjp5295g@group.calendar.google.com">
                     <i class="fa fa-calendar fa-lg"></i> AGENDA
                 </a>
             </li>
             <li>
-                <a href="/association/"><i class="fa fa-users fa-lg"></i> L'ASSOCIATION</a>
+                <a title="Page d'information sur l'association" href="/association/"><i class="fa fa-users fa-lg"></i> L'ASSOCIATION</a>
             </li>
             <li>
-                <a href="https://groups.google.com/forum/?hl=fr&amp;fromgroups#!forum/okiwi">
+                <a title="Google groupe" href="https://groups.google.com/forum/?hl=fr&amp;fromgroups#!forum/okiwi">
                     <i class="fa fa-comments fa-lg"></i> DISCUSSIONS
                 </a>
             </li>
             <li>
-                <a href="http://twitter.com/okiwi_fr">
+                <a title="Github Okiwi" href="https://github.com/okiwi">
                     <i id="github" class="fa fa-github fa-lg"></i> CODE
                 </a>
             </li>
             <li>
-                <a href="http://twitter.com/okiwi_fr">
+                <a title="Okiwi sur Twitter" href="http://twitter.com/okiwi_fr">
                     <i id="twitter" class="fa fa-twitter fa-lg"></i> TWITTER
                 </a>
             </li>
             <li>
-                <a href="https://plus.google.com/u/0/communities/110003801009461308694">
+                <a title="Okiwi sur Google plus" href="https://plus.google.com/u/0/communities/110003801009461308694">
                     <i id="google-plus" class="fa fa-google-plus-square fa-lg"></i> GOOGLE +
                 </a>
             </li>
@@ -65,8 +65,8 @@
             <br/>
 
             <p>
-                Le site <a href="http://okiwi.org">okiwi.org</a> ainsi que le <a
-                    href="https://github.com/okiwi">code</a>
+                Le site <a href="http://okiwi.org">okiwi.org</a> ainsi que le <a title="Repositories Github d'Okiwi"
+                                                                                 href="https://github.com/okiwi">code</a>
                 produit par Okiwi est sous licence <a href="http://www.wtfpl.net/txt/copying/">WTFPL</a>
             </p>
         </div>
