--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,7 +67,7 @@
             <p>
                 Le site <a href="http://okiwi.org">okiwi.org</a> ainsi que le <a title="Repositories Github d'Okiwi"
                                                                                  href="https://github.com/okiwi">code</a>
-                produit par Okiwi est sous licence <a href="http://www.wtfpl.net/txt/copying/">WTFPL</a>
+                produit par Okiwi sont sous licence <a href="http://www.wtfpl.net/txt/copying/">WTFPL</a>
             </p>
         </div>
     </div>
