--- a/_includes/header.html
+++ b/_includes/header.html
@@ -65,7 +65,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-item nav-link " href="{{ "/status/" | prepend: site.url }}">
-                        Status
+                        Statuts
                         </a>
                     </li>
                     <li class="nav-item">
