Fixes #10 - Lien vers le CoC qui est à la racine

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,7 +34,7 @@
             <a title="Repositories Github d'Okiwi" href="https://github.com/okiwi">code</a>
             produit par Okiwi sont sous licence <a href="http://www.wtfpl.net/txt/copying/">WTFPL</a>
         </p>
-        <p>Nous tou.te.s adhérons à ce <a href="CoC.html">code de conduite</a></p>
+        <p>Nous tou.te.s adhérons à ce <a href="/CoC.html">code de conduite</a></p>
         <p>Image du clavier de Luis Paniagua sur flickr</p>
     </div>
 </footer>
