--- a/_includes/header.html
+++ b/_includes/header.html
@@ -83,6 +83,11 @@
                             Slack
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-item nav-link " target="_blank" href="https://discord.com/invite/GkYYFYYk">
+                            Discord
+                        </a>
+                    </li>
                 </ul>
             </div>
         </nav>
