utilisation d'une invitation permanente pour discord

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -84,7 +84,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-item nav-link " target="_blank" href="https://discord.com/invite/GkYYFYYk">
+                        <a class="nav-item nav-link " target="_blank" href="https://discord.com/invite/BQa48a2">
                             Discord
                         </a>
                     </li>
