--- a/_includes/header.html
+++ b/_includes/header.html
@@ -69,6 +69,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-item nav-link" target="_blank" href="https://piaille.fr/@okiwi">
+                            Mastodon
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-item nav-link" target="_blank" href="https://twitter.com/okiwi_fr">
                             Twitter
                         </a>
