--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -9,16 +9,17 @@
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Association Okiwi">
     <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-    <meta name="keywords" content="okiwi,association,bordeaux,agile">
+    <meta name="keywords" content="okiwi,association,bordeaux,agile,software craft,coding dojo,tdd,ddd">
     <meta name="robots" content="INDEX,FOLLOW">
 
-    <link rel="shortcut icon" href="/img/favicon.png">
+    <link rel="icon" href="/img/favicon.png" type="image/x-icon">
     <meta name="apple-mobile-web-app-title" content="{{ site.title | escape }}">
 
     <meta property="og:title" content="{{ site.title | escape }}">
     <meta property="og:site_name" content="{{ site.title | escape }}">
-    <meta property=" og:url" content="{{ site.url | escape }}">
+    <meta property="og:url" content="{{ site.url | escape }}">
     <meta property="og:description"
           content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 </head>
