--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,13 +2,11 @@
 layout: default
 ---
 <!DOCTYPE html>
-<html>
+<html lang="fr-FR">
 
 {% include head.html %}
 
-
 <body>
-
 <div class="site">
 
     {% include header.html %}
@@ -21,9 +19,6 @@ layout: default
 
     {% include footer.html %}
 
-</div><!--/.site-->
-
+</div>
 </body>
-
-
 </html>
