--- a/_layouts/nofooter.html
+++ b/_layouts/nofooter.html
@@ -2,13 +2,11 @@
 layout: nofooter
 ---
 <!DOCTYPE html>
-<html>
+<html lang="fr-FR">
 
 {% include head.html %}
 
-
 <body>
-
 <div class="site">
 
     {% include header.html %}
@@ -18,11 +16,6 @@ layout: nofooter
         {{ content }}
 
     </main>
-
-
-</div><!--/.site-->
-
+</div>
 </body>
-
-
 </html>
