--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,7 +44,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-item nav-link " href="{{ "/status/" | prepend: site.url }}">
+                    <a class="nav-item nav-link " href="{{ "/statuts/" | prepend: site.url }}">
                     Statuts
                     </a>
                 </li>
