remplace discord link avec page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -64,7 +64,7 @@
                     <a class="dropdown-item" href="{{ "/slack/" | prepend: site.url }}">
                         Slack
                     </a>
-                    <a class="dropdown-item" target="_blank" href="https://discord.com/invite/BQa48a2">
+                    <a class="dropdown-item" target="_blank" href="{{ "/discord/" | prepend: site.url }}">
                         Discord
                     </a>
                     <a class="dropdown-item" target="_blank" href="https://piaille.fr/@okiwi">
